Unit 4 google fonts Noto Sans

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
 <head>
 	<title>The Giving Tree</title>
+	<!-- <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'> -->
+	<link href='https://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
@@ -12,10 +14,12 @@
 
 	<h1>The Giving Tree</h1>
 	
-	<p id="slogan">Find your passion</p>
+	<!-- <p id="slogan">Find your passion</p> -->
 
-	<p>Find your cause</p>
-	<p>Find your purpose</p>
+	<p>Find Your Passion</p>
+	<p>Find Your Cause</p>
+	<p>Find Your Purpose</p>
+
 	<hr>
 	<p>
 	<ul>
